[add] vision transformers (ViT)

--- a/ComputerVision/Notebooks/Vision_Transformers.ipynb
+++ b/ComputerVision/Notebooks/Vision_Transformers.ipynb
@@ -1,30 +1,19 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Vision Transformers"
-      ],
       "metadata": {
         "id": "YLuOHrBM42hk"
-      }
+      },
+      "source": [
+        "# Vision Transformers"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3LiQBmWg45io"
+      },
       "source": [
         "### Understanding Self-Attention and Its Role in Vision Tasks\n",
         "\n",
@@ -55,13 +44,13 @@
         "2. **Loss of Spatial Structure**: Images have a clear 2D spatial layout that self-attention does not natively respect. This is mitigated using **positional encoding**.\n",
         "\n",
         "---"
-      ],
-      "metadata": {
-        "id": "3LiQBmWg45io"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "7Gp8sN6S5Knq"
+      },
       "source": [
         "### Vision Transformers (ViTs)\n",
         "\n",
@@ -104,23 +93,20 @@
         "Source: https://www.google.com/url?sa=i&url=https%3A%2F%2Fmachinelearningmastery.com%2Fa-gentle-introduction-to-positional-encoding-in-transformer-models-part-1%2F&psig=AOvVaw2SeYyCtr19EeEFAkyDyoJj&ust=1734816980324000&source=images&cd=vfe&opi=89978449&ved=0CBcQjhxqFwoTCMDf74Gnt4oDFQAAAAAdAAAAABAE\n",
         "\n",
         "---"
-      ],
-      "metadata": {
-        "id": "7Gp8sN6S5Knq"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Let's explore the process of training and evaluating a vision transformer in this notebook."
-      ],
       "metadata": {
         "id": "oAAUGHRwE9Vn"
-      }
+      },
+      "source": [
+        "Let's explore the process of training and evaluating a vision transformer in this notebook."
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "CIUUDu4a4Jqv"
       },
@@ -138,6 +124,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ath2Xxb0FHLf"
+      },
       "source": [
         "### Preparing the Dataset\n",
         "\n",
@@ -151,13 +140,28 @@
         "- `Normalize`: Standardizes pixel values for better convergence.\n",
         "\n",
         "These transformations enhance the model's ability to generalize to unseen data and prevent overfitting."
-      ],
-      "metadata": {
-        "id": "ath2Xxb0FHLf"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nPNqj8OXFGkx",
+        "outputId": "81f1a19c-6343-4e49-cc1b-087ed19365d8"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Files already downloaded and verified\n",
+            "Files already downloaded and verified\n"
+          ]
+        }
+      ],
       "source": [
         "transform_train = transforms.Compose([\n",
         "    transforms.RandomHorizontalFlip(),\n",
@@ -178,28 +182,13 @@
         "# DataLoader\n",
         "train_loader = DataLoader(train_dataset, batch_size=64, shuffle=True, num_workers=2)\n",
         "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False, num_workers=2)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "nPNqj8OXFGkx",
-        "outputId": "81f1a19c-6343-4e49-cc1b-087ed19365d8"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Files already downloaded and verified\n",
-            "Files already downloaded and verified\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "afwOn8e-JTjY"
+      },
       "source": [
         "### Building the Vision Transformer\n",
         "\n",
@@ -221,13 +210,51 @@
         "   - A special [CLS] token is prepended to the patch embeddings.\n",
         "   - The final representation of this token is used for classification.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "afwOn8e-JTjY"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7cbdHwYdJGrP",
+        "outputId": "6915742c-ee7f-4e07-a409-24839e3c6b90"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "VisionTransformer(\n",
+              "  (patch_embed): Linear(in_features=48, out_features=64, bias=True)\n",
+              "  (layers): ModuleList(\n",
+              "    (0-5): 6 x TransformerEncoderLayer(\n",
+              "      (self_attn): MultiheadAttention(\n",
+              "        (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+              "      )\n",
+              "      (linear1): Linear(in_features=64, out_features=128, bias=True)\n",
+              "      (dropout): Dropout(p=0.1, inplace=False)\n",
+              "      (linear2): Linear(in_features=128, out_features=64, bias=True)\n",
+              "      (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+              "      (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+              "      (dropout1): Dropout(p=0.1, inplace=False)\n",
+              "      (dropout2): Dropout(p=0.1, inplace=False)\n",
+              "    )\n",
+              "  )\n",
+              "  (to_cls_token): Identity()\n",
+              "  (mlp_head): Sequential(\n",
+              "    (0): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+              "    (1): Linear(in_features=64, out_features=10, bias=True)\n",
+              "  )\n",
+              ")"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "class VisionTransformer(nn.Module):\n",
         "    def __init__(self, img_size=32, patch_size=4, num_classes=10, dim=64, depth=6, heads=4, mlp_dim=128):\n",
@@ -281,51 +308,13 @@
         "model = VisionTransformer()\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "model.to(device)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7cbdHwYdJGrP",
-        "outputId": "6915742c-ee7f-4e07-a409-24839e3c6b90"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "VisionTransformer(\n",
-              "  (patch_embed): Linear(in_features=48, out_features=64, bias=True)\n",
-              "  (layers): ModuleList(\n",
-              "    (0-5): 6 x TransformerEncoderLayer(\n",
-              "      (self_attn): MultiheadAttention(\n",
-              "        (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
-              "      )\n",
-              "      (linear1): Linear(in_features=64, out_features=128, bias=True)\n",
-              "      (dropout): Dropout(p=0.1, inplace=False)\n",
-              "      (linear2): Linear(in_features=128, out_features=64, bias=True)\n",
-              "      (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
-              "      (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
-              "      (dropout1): Dropout(p=0.1, inplace=False)\n",
-              "      (dropout2): Dropout(p=0.1, inplace=False)\n",
-              "    )\n",
-              "  )\n",
-              "  (to_cls_token): Identity()\n",
-              "  (mlp_head): Sequential(\n",
-              "    (0): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
-              "    (1): Linear(in_features=64, out_features=10, bias=True)\n",
-              "  )\n",
-              ")"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Mgw42irxJn5b"
+      },
       "source": [
         "### Training and Evaluation\n",
         "\n",
@@ -337,13 +326,62 @@
         "#### Evaluation:\n",
         "- After training, the model's accuracy is tested on the unseen test dataset.\n",
         "- The evaluation loop computes the number of correctly classified images and calculates the overall accuracy."
-      ],
-      "metadata": {
-        "id": "Mgw42irxJn5b"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xvdUoXHOJibz",
+        "outputId": "9fcd2ceb-10a4-405d-a4e2-e4a8d1d76499"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 79/79 [00:34<00:00,  2.32it/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1, Loss: 2.3349\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "100%|██████████| 79/79 [00:33<00:00,  2.39it/s]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 2, Loss: 2.3141\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Accuracy: 10.00%\n"
+          ]
+        }
+      ],
       "source": [
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
@@ -384,71 +422,22 @@
         "    print(f\"Accuracy: {100 * correct / total:.2f}%\")\n",
         "\n",
         "evaluate(model, test_loader)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xvdUoXHOJibz",
-        "outputId": "9fcd2ceb-10a4-405d-a4e2-e4a8d1d76499"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 79/79 [00:27<00:00,  2.88it/s]\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 1, Loss: 2.3092\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 79/79 [00:27<00:00,  2.88it/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Epoch 2, Loss: 2.3066\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy: 10.00%\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Exercises"
-      ],
       "metadata": {
         "id": "U0M02v2z-Q6D"
-      }
+      },
+      "source": [
+        "## Exercises"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "forKIO41-Vu3"
+      },
       "source": [
         "### 1. Modify the Patch Size\n",
         "- Change the patch size in the Vision Transformer model from 4x4 to 8x8. Observe how this affects the performance and training time.\n",
@@ -469,19 +458,40 @@
         "### 5. Visualize Attention Maps\n",
         "- Visualize the attention maps generated by the self-attention mechanism for a few sample images. Highlight which parts of the image the model focuses on during classification.\n",
         "- **Hint:** Extract the attention scores from the Transformer layers and use a heatmap library like `seaborn.heatmap` for visualization.\n"
-      ],
-      "metadata": {
-        "id": "forKIO41-Vu3"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "ax_jegPn-Wmh"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
